--- a/interface/index.html
+++ b/interface/index.html
@@ -6,10 +6,18 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/interface.css">
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-	<script type="text/javascript" src="js/interface.js"></script>
+	<script type="text/javascript" src="js/interface_functions.js"></script>
 </head>
 <body>
-	<div id="tools_sidebar"></div>
 	<div id="work_field"></div>
+	<div id="tools_sidebar">
+		<button id="create_block">Создать блок</button>
+	</div>
+
+
+	<div class="modal">
+
+	</div>
+
 </body>
 </html>
